--- a/ui/_main_window.ui
+++ b/ui/_main_window.ui
@@ -201,13 +201,6 @@
              </property>
             </widget>
            </item>
-           <item row="5" column="1" colspan="2">
-            <widget class="QLabel" name="w_l_plan_isocenter">
-             <property name="text">
-              <string/>
-             </property>
-            </widget>
-           </item>
            <item row="5" column="0">
             <widget class="QLabel" name="label_17">
              <property name="text">
@@ -276,6 +269,13 @@
              </property>
             </widget>
            </item>
+           <item row="5" column="1" colspan="3">
+            <widget class="QLabel" name="w_l_plan_isocenter">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
           </layout>
          </widget>
         </item>
@@ -292,7 +292,24 @@
              </property>
             </widget>
            </item>
-           <item row="7" column="3">
+           <item row="0" column="1" colspan="2">
+            <widget class="QLabel" name="w_l_api_status">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="8" column="1" colspan="2">
+            <widget class="QComboBox" name="w_cb_treatment_room"/>
+           </item>
+           <item row="4" column="1">
+            <widget class="QLabel" name="label_28">
+             <property name="text">
+              <string>X</string>
+             </property>
+            </widget>
+           </item>
+           <item row="9" column="3">
             <widget class="QPushButton" name="w_pb_get_map">
              <property name="enabled">
               <bool>false</bool>
@@ -302,43 +319,6 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="3">
-            <widget class="QPushButton" name="w_pb_api_ping">
-             <property name="text">
-              <string>Ping API</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1" colspan="2">
-            <widget class="QDoubleSpinBox" name="w_dsb_api_couch_buffer">
-             <property name="decimals">
-              <number>1</number>
-             </property>
-             <property name="value">
-              <double>2.000000000000000</double>
-             </property>
-            </widget>
-           </item>
-           <item row="4" column="1">
-            <widget class="QCheckBox" name="w_ch_high_res">
-             <property name="text">
-              <string>High Resolution Map</string>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="1" colspan="2">
-            <widget class="QDoubleSpinBox" name="w_dsb_api_patient_buffer">
-             <property name="decimals">
-              <number>1</number>
-             </property>
-             <property name="value">
-              <double>2.000000000000000</double>
-             </property>
-            </widget>
-           </item>
-           <item row="5" column="1" colspan="2">
-            <widget class="QComboBox" name="w_cb_surface_for_map"/>
-           </item>
            <item row="3" column="0">
             <widget class="QLabel" name="label_22">
              <property name="text">
@@ -346,7 +326,17 @@
              </property>
             </widget>
            </item>
-           <item row="6" column="0">
+           <item row="3" column="3">
+            <widget class="QLabel" name="label_24">
+             <property name="text">
+              <string>cm</string>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="1" colspan="2">
+            <widget class="QComboBox" name="w_cb_surface_for_map"/>
+           </item>
+           <item row="8" column="0">
             <widget class="QLabel" name="label_20">
              <property name="text">
               <string>Treatment Room</string>
@@ -367,29 +357,97 @@
              </property>
             </widget>
            </item>
-           <item row="3" column="3">
-            <widget class="QLabel" name="label_24">
+           <item row="0" column="3">
+            <widget class="QPushButton" name="w_pb_fetch_api_data">
              <property name="text">
-              <string>cm</string>
+              <string>Fetch Data</string>
              </property>
             </widget>
            </item>
-           <item row="0" column="1" colspan="2">
-            <widget class="QLabel" name="w_l_api_status">
-             <property name="text">
-              <string/>
-             </property>
-            </widget>
-           </item>
-           <item row="5" column="0">
+           <item row="7" column="0">
             <widget class="QLabel" name="label_19">
              <property name="text">
               <string>Surface:</string>
              </property>
             </widget>
            </item>
-           <item row="6" column="1" colspan="2">
-            <widget class="QComboBox" name="w_cb_treatment_room"/>
+           <item row="5" column="1">
+            <widget class="QLabel" name="label_29">
+             <property name="text">
+              <string>Y</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="0">
+            <widget class="QLabel" name="label_27">
+             <property name="text">
+              <string>Shift Surface</string>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="1">
+            <widget class="QLabel" name="label_30">
+             <property name="text">
+              <string>Z</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="2">
+            <widget class="QDoubleSpinBox" name="w_dsb_surface_shift_x"/>
+           </item>
+           <item row="5" column="2">
+            <widget class="QDoubleSpinBox" name="w_dsb_surface_shift_y"/>
+           </item>
+           <item row="6" column="2">
+            <widget class="QDoubleSpinBox" name="w_dsb_surface_shift_z"/>
+           </item>
+           <item row="7" column="3">
+            <widget class="QPushButton" name="w_pb_obj_file">
+             <property name="text">
+              <string>From File</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="3">
+            <widget class="QLabel" name="label_2">
+             <property name="text">
+              <string>cm</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="3">
+            <widget class="QLabel" name="label_7">
+             <property name="text">
+              <string>cm</string>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="3">
+            <widget class="QLabel" name="label_31">
+             <property name="text">
+              <string>cm</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1" colspan="2">
+            <widget class="QDoubleSpinBox" name="w_dsb_api_couch_buffer">
+             <property name="decimals">
+              <number>1</number>
+             </property>
+             <property name="value">
+              <double>2.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="1" colspan="2">
+            <widget class="QDoubleSpinBox" name="w_dsb_api_patient_buffer">
+             <property name="decimals">
+              <number>1</number>
+             </property>
+             <property name="value">
+              <double>2.000000000000000</double>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -498,6 +556,13 @@
            <string>OBJ</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_5">
+           <item row="2" column="2">
+            <widget class="QLabel" name="w_l_obj_transparency">
+             <property name="text">
+              <string>100</string>
+             </property>
+            </widget>
+           </item>
            <item row="2" column="1">
             <widget class="QSlider" name="w_hs_obj_transparency">
              <property name="maximum">
@@ -508,86 +573,6 @@
              </property>
              <property name="orientation">
               <enum>Qt::Orientation::Horizontal</enum>
-             </property>
-            </widget>
-           </item>
-           <item row="4" column="0">
-            <widget class="QCheckBox" name="w_ch_use_obj">
-             <property name="text">
-              <string>Use .obj File</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
-            <widget class="QLabel" name="label_4">
-             <property name="text">
-              <string>Color:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="5" column="0" colspan="3">
-            <widget class="QGroupBox" name="w_gb_obj_file">
-             <property name="title">
-              <string>OBJ File</string>
-             </property>
-             <layout class="QGridLayout" name="gridLayout_3">
-              <item row="0" column="2">
-               <widget class="QPushButton" name="w_pb_obj_file">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-                <property name="maximumSize">
-                 <size>
-                  <width>25</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-                <property name="text">
-                 <string>...</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1">
-               <widget class="QLineEdit" name="w_le_obj_file">
-                <property name="minimumSize">
-                 <size>
-                  <width>100</width>
-                  <height>0</height>
-                 </size>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="0">
-               <widget class="QLabel" name="label_2">
-                <property name="text">
-                 <string>File Path       </string>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="QPushButton" name="w_pb_obj_color">
-             <property name="text">
-              <string>Select Color</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_10">
-             <property name="text">
-              <string>Transparency:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="2">
-            <widget class="QLabel" name="w_l_obj_transparency">
-             <property name="text">
-              <string>100</string>
              </property>
             </widget>
            </item>
@@ -619,45 +604,25 @@
              </property>
             </widget>
            </item>
-           <item row="3" column="0">
-            <widget class="QLabel" name="label_7">
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_4">
              <property name="text">
-              <string>Orientation:</string>
+              <string>Color:</string>
              </property>
             </widget>
            </item>
-           <item row="3" column="1">
-            <widget class="QWidget" name="widget" native="true">
-             <layout class="QHBoxLayout" name="horizontalLayout_3">
-              <item>
-               <widget class="QRadioButton" name="w_rb_hfs">
-                <property name="text">
-                 <string>HFS</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QRadioButton" name="w_rb_hfp">
-                <property name="text">
-                 <string>HFP</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QRadioButton" name="w_rb_ffs">
-                <property name="text">
-                 <string>FFS</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QRadioButton" name="w_rb_ffp">
-                <property name="text">
-                 <string>FFP</string>
-                </property>
-               </widget>
-              </item>
-             </layout>
+           <item row="1" column="1">
+            <widget class="QPushButton" name="w_pb_obj_color">
+             <property name="text">
+              <string>Select Color</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_10">
+             <property name="text">
+              <string>Transparency:</string>
+             </property>
             </widget>
            </item>
           </layout>
