--- a/ui/_main_window.ui
+++ b/ui/_main_window.ui
@@ -45,7 +45,7 @@
        <enum>QTabWidget::TabPosition::North</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -553,30 +553,24 @@
         <item>
          <widget class="QGroupBox" name="groupBox_8">
           <property name="title">
-           <string>OBJ</string>
+           <string>MapRT</string>
           </property>
-          <layout class="QGridLayout" name="gridLayout_5">
-           <item row="2" column="2">
-            <widget class="QLabel" name="w_l_obj_transparency">
+          <layout class="QGridLayout" name="gridLayout_3">
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_4">
              <property name="text">
-              <string>100</string>
+              <string>Color:</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="1">
-            <widget class="QSlider" name="w_hs_obj_transparency">
-             <property name="maximum">
-              <number>100</number>
-             </property>
-             <property name="value">
-              <number>100</number>
-             </property>
-             <property name="orientation">
-              <enum>Qt::Orientation::Horizontal</enum>
+           <item row="0" column="1">
+            <widget class="QPushButton" name="w_pb_obj_color">
+             <property name="text">
+              <string>Select Color</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="2">
+           <item row="0" column="2">
             <widget class="QFrame" name="w_fr_obj_color">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
@@ -605,23 +599,35 @@
             </widget>
            </item>
            <item row="1" column="0">
-            <widget class="QLabel" name="label_4">
+            <widget class="QLabel" name="label_10">
+             <property name="maximumSize">
+              <size>
+               <width>16777215</width>
+               <height>16777215</height>
+              </size>
+             </property>
              <property name="text">
-              <string>Color:</string>
+              <string>Transparency:</string>
              </property>
             </widget>
            </item>
            <item row="1" column="1">
-            <widget class="QPushButton" name="w_pb_obj_color">
-             <property name="text">
-              <string>Select Color</string>
+            <widget class="QSlider" name="w_hs_obj_transparency">
+             <property name="maximum">
+              <number>100</number>
+             </property>
+             <property name="value">
+              <number>100</number>
+             </property>
+             <property name="orientation">
+              <enum>Qt::Orientation::Horizontal</enum>
              </property>
             </widget>
            </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_10">
+           <item row="1" column="2">
+            <widget class="QLabel" name="w_l_obj_transparency">
              <property name="text">
-              <string>Transparency:</string>
+              <string>100</string>
              </property>
             </widget>
            </item>
@@ -633,7 +639,20 @@
           <property name="title">
            <string>Scene</string>
           </property>
-          <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0">
+          <layout class="QGridLayout" name="gridLayout">
+           <item row="0" column="1">
+            <widget class="QPushButton" name="w_pb_background_color">
+             <property name="maximumSize">
+              <size>
+               <width>16777215</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>Select Color</string>
+             </property>
+            </widget>
+           </item>
            <item row="0" column="2">
             <widget class="QFrame" name="w_fr_background_color">
              <property name="sizePolicy">
@@ -664,15 +683,14 @@
            </item>
            <item row="0" column="0">
             <widget class="QLabel" name="label_5">
+             <property name="maximumSize">
+              <size>
+               <width>100</width>
+               <height>16777215</height>
+              </size>
+             </property>
              <property name="text">
               <string>Color:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="1">
-            <widget class="QPushButton" name="w_pb_background_color">
-             <property name="text">
-              <string>Select Color</string>
              </property>
             </widget>
            </item>
@@ -683,7 +701,7 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="1">
+           <item row="1" column="1" colspan="2">
             <widget class="QWidget" name="widget_2" native="true">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -747,8 +765,8 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>373</width>
-            <height>226</height>
+            <width>20</width>
+            <height>40</height>
            </size>
           </property>
          </spacer>
@@ -767,7 +785,7 @@
     <item>
      <widget class="QTabWidget" name="w_tw_visualizations">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab_3">
        <attribute name="title">
@@ -824,9 +842,9 @@
            <item>
             <widget class="QVTKRenderWindowInteractor" name="vtk_widget" native="true">
              <property name="sizePolicy">
-              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-               <horstretch>1</horstretch>
-               <verstretch>1</verstretch>
+              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
               </sizepolicy>
              </property>
              <property name="minimumSize">
