--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -509,19 +509,19 @@
            <item row="2" column="0">
             <widget class="QLabel" name="label_8">
              <property name="text">
-              <string>Transparency:</string>
+              <string>Surface Opacity:</string>
              </property>
             </widget>
            </item>
            <item row="0" column="0">
             <widget class="QLabel" name="label_3">
              <property name="text">
-              <string>Color:</string>
+              <string>Surface Color:</string>
              </property>
             </widget>
            </item>
            <item row="2" column="2">
-            <widget class="QSlider" name="w_hs_dcm_transparency">
+            <widget class="QSlider" name="w_hs_dcm_opacity">
              <property name="maximum">
               <number>100</number>
              </property>
@@ -534,7 +534,7 @@
             </widget>
            </item>
            <item row="2" column="3">
-            <widget class="QLabel" name="w_l_dcm_transparency">
+            <widget class="QLabel" name="w_l_dcm_opacity">
              <property name="text">
               <string>100</string>
              </property>
@@ -559,7 +559,7 @@
            <item row="0" column="0">
             <widget class="QLabel" name="label_4">
              <property name="text">
-              <string>Color:</string>
+              <string>Surface Color:</string>
              </property>
             </widget>
            </item>
@@ -607,12 +607,12 @@
               </size>
              </property>
              <property name="text">
-              <string>Transparency:</string>
+              <string>Surface Opacity:</string>
              </property>
             </widget>
            </item>
            <item row="1" column="1">
-            <widget class="QSlider" name="w_hs_obj_transparency">
+            <widget class="QSlider" name="w_hs_obj_opacity">
              <property name="maximum">
               <number>100</number>
              </property>
@@ -625,7 +625,7 @@
             </widget>
            </item>
            <item row="1" column="2">
-            <widget class="QLabel" name="w_l_obj_transparency">
+            <widget class="QLabel" name="w_l_obj_opacity">
              <property name="text">
               <string>100</string>
              </property>
@@ -640,6 +640,68 @@
            <string>Scene</string>
           </property>
           <layout class="QGridLayout" name="gridLayout">
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_33">
+             <property name="text">
+              <string>Laser Opacity</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QPushButton" name="w_pb_laser_color">
+             <property name="text">
+              <string>Select Color</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="2">
+            <widget class="QLabel" name="w_l_laser_opacity">
+             <property name="text">
+              <string>100</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_5">
+             <property name="maximumSize">
+              <size>
+               <width>100</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>Background Color:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="2">
+            <widget class="QFrame" name="w_fr_laser_color">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>25</width>
+               <height>25</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>25</width>
+               <height>25</height>
+              </size>
+             </property>
+             <property name="frameShape">
+              <enum>QFrame::Shape::StyledPanel</enum>
+             </property>
+             <property name="frameShadow">
+              <enum>QFrame::Shadow::Raised</enum>
+             </property>
+            </widget>
+           </item>
            <item row="0" column="1">
             <widget class="QPushButton" name="w_pb_background_color">
              <property name="maximumSize">
@@ -650,6 +712,33 @@
              </property>
              <property name="text">
               <string>Select Color</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QSlider" name="w_hs_laser_opacity">
+             <property name="maximum">
+              <number>100</number>
+             </property>
+             <property name="value">
+              <number>100</number>
+             </property>
+             <property name="orientation">
+              <enum>Qt::Orientation::Horizontal</enum>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="0">
+            <widget class="QLabel" name="label_16">
+             <property name="text">
+              <string>View From</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_32">
+             <property name="text">
+              <string>Laser Color:</string>
              </property>
             </widget>
            </item>
@@ -681,27 +770,7 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="0">
-            <widget class="QLabel" name="label_5">
-             <property name="maximumSize">
-              <size>
-               <width>100</width>
-               <height>16777215</height>
-              </size>
-             </property>
-             <property name="text">
-              <string>Color:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
-            <widget class="QLabel" name="label_16">
-             <property name="text">
-              <string>View From</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1" colspan="2">
+           <item row="4" column="0" colspan="3">
             <widget class="QWidget" name="widget_2" native="true">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -785,7 +854,7 @@
     <item>
      <widget class="QTabWidget" name="w_tw_visualizations">
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab_3">
        <attribute name="title">
