--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -227,6 +227,9 @@
             </item>
             <item row="8" column="2">
              <widget class="QDoubleSpinBox" name="w_dsb_surface_shift_y">
+              <property name="decimals">
+               <number>1</number>
+              </property>
               <property name="minimum">
                <double>-100.000000000000000</double>
               </property>
@@ -327,6 +330,9 @@
             </item>
             <item row="9" column="2">
              <widget class="QDoubleSpinBox" name="w_dsb_surface_shift_z">
+              <property name="decimals">
+               <number>1</number>
+              </property>
               <property name="minimum">
                <double>-100.000000000000000</double>
               </property>
@@ -374,8 +380,14 @@
               <property name="prefix">
                <string/>
               </property>
+              <property name="decimals">
+               <number>1</number>
+              </property>
               <property name="minimum">
                <double>-100.000000000000000</double>
+              </property>
+              <property name="maximum">
+               <double>100.000000000000000</double>
               </property>
               <property name="singleStep">
                <double>0.500000000000000</double>
